--- a/app/globals.css
+++ b/app/globals.css
@@ -32,13 +32,10 @@
   top: 50%;
   height: 100%;
   width: 100%;
-  margin-left: 1vw;
-  margin-right: 1vw;
-  margin-top: 1vw;
-  margin-bottom: 1vw;
+  margin-left: 2vw;
   transform: translate(-50%, -50%);
   z-index: 999;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .main {
@@ -53,6 +50,7 @@
   display: flex;
   flex-wrap: 'wrap';
   position: relative;
+  overflow: hidden;
 }
 
 .circles-area {
